--- a/style.css
+++ b/style.css
@@ -101,7 +101,13 @@ body{
 background-color: black;
     } 
 
+.header{
+    background-color: white;
+}
 
+.logo h1{
+    color: black;
+}
     
 .main{
     flex-direction: column;
@@ -112,6 +118,8 @@ background-color: black;
     width: 300px;
     height: 300px;
     border-radius: 100%;
+    border-style: double;
+    border-color: whitesmoke;
 
 }
 .text{
@@ -156,6 +164,14 @@ font-size: 1.53rem;
    padding-bottom: 10px;
 }
 
+.image {
+    height: 80vh;
+    width: 50%;
+    background-image: url(IMG-20221218-WA0001\ \(1\).jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: left center;
+}
 
 
 
@@ -170,3 +186,45 @@ font-size: 1.53rem;
  
 
 
+.footer_ending{
+    width: 100%;
+    height: 10vh;
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: ;
+}
+
+.socials{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    background-color:white;
+    height: 100%;
+}
+
+
+
+.fa-brands{
+    height: 20px;
+     width:15px;
+     padding-right: 33px;
+}
+
+.fa-instagram{
+    color: red;
+}
+.fa-square-x-twitter{
+    color: blue;
+}
+
+.fa-github{
+    color: black;
+    
+}
+.socials div a{
+    color: black;
+    text-decoration: none;
+    font-size: 1.12rem;
+}
