had to change the background image position on the mobile screen resolution

--- a/style.css
+++ b/style.css
@@ -120,7 +120,8 @@ background-color: black;
     border-radius: 100%;
     border-style: double;
     border-color: whitesmoke;
-
+background-image: url(IMG-20221218-WA0001\ \(1\).jpg);
+background-position:  center;
 }
 .text{
 
