--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ background-color: black;
     border-color: whitesmoke;
 background-image: url(IMG-20221218-WA0001\ \(1\).jpg);
 background-position:  center;
+padding-top: 10px;
 }
 .text{
 
