--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ background-color: black;
     border-color: whitesmoke;
 background-image: url(IMG-20221218-WA0001\ \(1\).jpg);
 background-position:  center;
-padding-top: 10px;
+margin-bottom: 10px;
 }
 .text{
 
@@ -190,11 +190,11 @@ font-size: 1.53rem;
 
 .footer_ending{
     width: 100%;
-    height: 10vh;
+    height: 7vh;
     background-color: whitesmoke;
     display: flex;
     justify-content: center;
-    align-items: ;
+    align-items:center ;
 }
 
 .socials{
